--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # except the data needed for testing.
 *.csv
 !testdata/ten.csv
+!testdata/bad.csv
 
 # ignore files in the utilities/bin except the readme
 utilities/bin/*
