corrected .gitignore so testdata is included

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 # ignore .csv files which are generally too large for hosting on github
 # except the data needed for testing.
 *.csv
-!testdata/ten.csv
-!testdata/bad.csv
-!testdata/empty.csv
+!testdata/*
 
 # ignore files in the utilities/bin except the readme
 utilities/bin/*
